css/site.css
/* ... */
.wp-block-button.is-style-outline .wp-block-button__link {
  padding: 13px 40px 13px 40px;
}

button:hover, button:focus, button:active, .button:hover, .button:focus, .button:active, .wp-block-button__link:hover, .wp-block-button__link:focus, .wp-block-button__link:active, input[type="button"]:hover, input[type="button"]:focus, input[type="button"]:active, input[type="reset"]:hover, input[type="reset"]:focus, input[type="reset"]:active, input[type="submit"]:hover, input[type="submit"]:focus, input[type="submit"]:active, .elementor-button-wrapper .elementor-button:hover, .elementor-button-wrapper .elementor-button:focus, .elementor-button-wrapper .elementor-button:active, .wc-block-cart__submit:hover {
  box-shadow: 0px 15px 25px -7px rgba(0,0,0,0.2);
}

.kb-button.kb-btn-global-outline.kb-btn-global-inherit {
  padding-top: calc(13px - 2px);
  padding-right: calc(40px - 2px);
  padding-bottom: calc(13px - 2px);
  padding-left: calc(40px - 2px);
}

button.button-style-secondary, .button.button-style-secondary, .wp-block-button__link.button-style-secondary, input[type="button"].button-style-secondary, input[type="reset"].button-style-secondary, input[type="submit"].button-style-secondary, .fl-button.button-style-secondary, .elementor-button-wrapper .elementor-button.button-style-secondary, .wc-block-components-checkout-place-order-button.button-style-secondary, .wc-block-cart__submit.button-style-secondary {
  font-style: normal;
  font-weight: normal;
  font-size: 19px;
  line-height: 1.5;
  letter-spacing: 1px;
  font-family: 'Bebas Neue', var(--global-fallback-font);
  text-transform: uppercase;
}

/* ===== Header ===== */
#masthead, #masthead .kadence-sticky-header.item-is-fixed:not(.item-at-start):not(.site-header-row-container):not(.site-main-header-wrap), #masthead .kadence-sticky-header.item-is-fixed:not(.item-at-start) > .site-header-row-container-inner {
  background: var(--global-palette1);
}

.site-main-header-wrap .site-header-row-container-inner {
  background: var(--global-palette1);
}

.site-main-header-inner-wrap {
  min-height: 80px;
}

.transparent-header #masthead .site-main-header-wrap .site-header-row-container-inner {
  background: var(--global-palette1);
}

.header-navigation[class*="header-navigation-style-underline"] .header-menu-container.primary-menu-container > ul > li > a:after {
  width: calc(100% - 1.3em);
}

.main-navigation .primary-menu-container > ul > li.menu-item > a {
  padding-left: calc(1.3em / 2);
  padding-right: calc(1.3em / 2);
  padding-top: 0.2em;
  padding-bottom: 0.2em;
  color: #ffffff;
}

.main-navigation .primary-menu-container > ul > li.menu-item .dropdown-nav-special-toggle {
  right: calc(1.3em / 2);
}

.main-navigation .primary-menu-container > ul li.menu-item > a {
  font-style: normal;
  font-weight: normal;
  font-size: 40px;
  letter-spacing: 1px;
  font-family: var(--global-primary-nav-font-family);
  text-transform: uppercase;
}

.main-navigation .primary-menu-container > ul > li.menu-item > a:hover {
  color: var(--global-palette2);
}

.main-navigation .primary-menu-container > ul > li.menu-item.current-menu-item > a {
  color: var(--global-palette2);
}

.header-navigation[class*="header-navigation-style-underline"] .header-menu-container.secondary-menu-container > ul > li > a:after {
  width: calc(100% - 1.2em);
}

.secondary-navigation .secondary-menu-container > ul > li.menu-item > a {
  padding-left: calc(1.2em / 2);
  padding-right: calc(1.2em / 2);
  padding-top: 0.2em;
  padding-bottom: 0.2em;
  color: #ffffff;
}

.secondary-navigation .primary-menu-container > ul > li.menu-item .dropdown-nav-special-toggle {
  right: calc(1.2em / 2);
}

.secondary-navigation .secondary-menu-container > ul li.menu-item > a {
  font-style: normal;
  font-weight: normal;
  font-size: 40px;
  font-family: 'Bebas Neue', var(--global-fallback-font);
  text-transform: uppercase;
}

.secondary-navigation .secondary-menu-container > ul > li.menu-item > a:hover {
  color: var(--global-palette2);
}

.secondary-navigation .secondary-menu-container > ul > li.menu-item.current-menu-item > a {
  color: var(--global-palette2);
}

.header-navigation .header-menu-container ul ul.sub-menu, .header-navigation .header-menu-container ul ul.submenu {
  background: var(--global-palette2);
  box-shadow: 0px 2px 13px 0px rgba(0,0,0,0.1);
}

.header-navigation .header-menu-container ul ul li.menu-item, .header-menu-container ul.menu > li.kadence-menu-mega-enabled > ul > li.menu-item > a {
  border-bottom: 0px none rgba(255,255,255,0);
  border-radius: 0px 0px 0px 0px;
}

.header-navigation .header-menu-container ul ul li.menu-item > a {
  width: 200px;
  padding-top: 1em;
  padding-bottom: 1em;
  color: var(--global-palette3);
  font-style: normal;
  font-size: 19px;
  line-height: 1.2;
}

.header-navigation .header-menu-container ul ul li.menu-item > a:hover {
  color: var(--global-palette1);
  background: var(--global-palette3);
  border-radius: 0px 0px 0px 0px;
}

.header-navigation .header-menu-container ul ul li.menu-item.current-menu-item > a {
  color: var(--global-palette1);
  background: var(--global-palette3);
  border-radius: 0px 0px 0px 0px;
}

.mobile-toggle-open-container .menu-toggle-open, .mobile-toggle-open-container .menu-toggle-open:focus {
  color: #ffffff;
  padding: 0.4em 0.6em 0.4em 0.6em;
  font-size: 14px;
}

.mobile-toggle-open-container .menu-toggle-open.menu-toggle-style-bordered {
  border: 1px solid currentColor;
}

.mobile-toggle-open-container .menu-toggle-open .menu-toggle-icon {
  font-size: 20px;
}

.mobile-toggle-open-container .menu-toggle-open:hover, .mobile-toggle-open-container .menu-toggle-open:focus-visible {
  color: var(--global-palette2);
}

.mobile-navigation ul li {
  font-style: normal;
  font-weight: normal;
  font-size: 22px;
  line-height: 1;
  letter-spacing: 1px;
  font-family: 'Bebas Neue', var(--global-fallback-font);
}

.mobile-navigation ul li a {
  padding-top: 1em;
  padding-bottom: 1em;
}
/* ... */

